# Willionaire

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/shader/: circle.frag  circle.geom  circle.vert  colorPicker.frag  copy.frag  copy.vert  cube.frag  cube.vert  grey.frag  outLine.frag  pure.frag  pure.vert  test.frag  text.frag  text.vert
include/: attri.hpp  buff.hpp  card.hpp  career.hpp  connection.hpp  cube.hpp  game.hpp  loader.h  player.hpp  ui.hpp  window.hpp
include/gl/: image.h  shader.h  text.h  texture.h
src/: CMakeLists.txt  card.cpp  client.cpp  connection.cpp  content.cpp  game.cpp  loader.cpp  main.cpp  player.cpp  round.cpp  server.cpp  ui.cpp  uibasic.cpp  uiinit.cpp  window.cpp
src/gl/: image.cpp  shader.cpp  text.cpp  texture.cpp
